Fix text editor / NS z-index

--- a/nodelab/app/styles/_general.less
+++ b/nodelab/app/styles/_general.less
@@ -40,7 +40,7 @@ a {
   top: 0;
   bottom: 0;
   left: 0;
-  z-index:  999999;
+  z-index:101;
   -webkit-user-select: none;
   cursor: default;
 
@@ -50,7 +50,7 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000000;
+  z-index: 100;
   -webkit-user-select: none;
   cursor: default;
 }
