--- a/nodelab/app/styles/_node_searcher.less
+++ b/nodelab/app/styles/_node_searcher.less
@@ -50,7 +50,7 @@
   max-height: 300px;
 */
   height: 300px;
-  z-index: 20;
+  z-index: 102;
 
   display: -webkit-flex;
   display:flex;
